; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/usp10/extr_shape.c_apply_GSUB_feature_to_glyph.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/usp10/extr_shape.c_apply_GSUB_feature_to_glyph.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@FEATURE_GSUB_TABLE = common dso_local global i32 0, align 4
@GSUB_E_NOFEATURE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"applying feature %s\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*, %struct.TYPE_4__*, i32*, i32, i32, i32*, i8*)* @apply_GSUB_feature_to_glyph to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @apply_GSUB_feature_to_glyph(i32 %0, i32* %1, %struct.TYPE_4__* %2, i32* %3, i32 %4, i32 %5, i32* %6, i8* %7) #0 {
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca %struct.TYPE_4__*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32*, align 8
  %17 = alloca i8*, align 8
  %18 = alloca i32*, align 8
  store i32 %0, i32* %10, align 4
  store i32* %1, i32** %11, align 8
  store %struct.TYPE_4__* %2, %struct.TYPE_4__** %12, align 8
  store i32* %3, i32** %13, align 8
  store i32 %4, i32* %14, align 4
  store i32 %5, i32* %15, align 4
  store i32* %6, i32** %16, align 8
  store i8* %7, i8** %17, align 8
  %19 = load i32, i32* %10, align 4
  %20 = load i32*, i32** %11, align 8
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %12, align 8
  %22 = load i32, i32* @FEATURE_GSUB_TABLE, align 4
  %23 = load i8*, i8** %17, align 8
  %24 = call i32* @load_OT_feature(i32 %19, i32* %20, %struct.TYPE_4__* %21, i32 %22, i8* %23)
  store i32* %24, i32** %18, align 8
  %25 = load i32*, i32** %18, align 8
  %26 = icmp ne i32* %25, null
  br i1 %26, label %29, label %27

27:                                               ; preds = %8
  %28 = load i32, i32* @GSUB_E_NOFEATURE, align 4
  store i32 %28, i32* %9, align 4
  br label %41

29:                                               ; preds = %8
  %30 = load i8*, i8** %17, align 8
  %31 = call i32 @TRACE(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i8* %30)
  %32 = load %struct.TYPE_4__*, %struct.TYPE_4__** %12, align 8
  %33 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %32, i32 0, i32 0
  %34 = load i32, i32* %33, align 4
  %35 = load i32*, i32** %18, align 8
  %36 = load i32*, i32** %13, align 8
  %37 = load i32, i32* %14, align 4
  %38 = load i32, i32* %15, align 4
  %39 = load i32*, i32** %16, align 8
  %40 = call i32 @GSUB_apply_feature_all_lookups(i32 %34, i32* %35, i32* %36, i32 %37, i32 %38, i32* %39)
  store i32 %40, i32* %9, align 4
  br label %41

41:                                               ; preds = %29, %27
  %42 = load i32, i32* %9, align 4
  ret i32 %42
}

declare dso_local i32* @load_OT_feature(i32, i32*, %struct.TYPE_4__*, i32, i8*) #1

declare dso_local i32 @TRACE(i8*, i8*) #1

declare dso_local i32 @GSUB_apply_feature_all_lookups(i32, i32*, i32*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
